<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Main2Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_findText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintText"
        android:textColor="@android:color/darker_gray"
        android:text="无不良病状/无不良病状/一致，未离开昨天所在地区/惠州市/绿色/无/否（未接触）/是，情况属实/确认已认真查看，并填写信息无误" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promptText"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bt_checkInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/step2"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <Switch
        android:id="@+id/serviceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/serviceStatus"
        android:textColor="#ccc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>