<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!--查找控件-->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="#0000"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/step_search"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_search"
                        style="@style/Widget.MaterialComponents.ChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_content"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_content" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_id"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_id" />

                    </com.google.android.material.chip.ChipGroup>

                    <EditText
                        android:id="@+id/search_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/add_step_info_white"
                        android:hint="@string/title_info"
                        android:maxLines="5"
                        android:outlineAmbientShadowColor="#0000"
                        android:outlineSpotShadowColor="#0000"
                        android:padding="10dp"
                        android:paddingStart="16dp"
                        android:textColor="#000"
                        android:textColorHint="#272727" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_control"
                        android:textSize="16sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_control"
                        style="@style/Widget.MaterialComponents.ChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_button"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_button" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_image"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_image" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_text"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_text" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_radiobutton"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_radiobutton" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_checkbox"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_checkbox" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_editText"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chip_editText" />

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <!--设置事件-->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="#0000"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设置事件："
                    android:textSize="16sp" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_event"
                    style="@style/Widget.MaterialComponents.ChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:checkedChip="@+id/chip_button"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_check"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_click" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_press"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_press" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_copy"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_copy" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_paste"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_paste" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>